--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	"main": "./lib/streambuffer.js",
 	"engines": { "node": ">= 0.3.0" },
 	"dependencies": {
+	},
+	"devDependencies": {
 		"vows": ">= 0.5.6"
 	},
 	"repository" : {
