--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 	"repository" : {
         "type" : "git",
          "url" : "https://github.com/samcday/node-stream-buffer.git"
-    }
+    },
+    "scripts": {
+		"test": "vows --spec"
+	}
 }
