--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-	"name": "stream-buffers",
-	"version": "0.2.5",
-	"description": "Buffer-backed Streams for reading and writing.",
-	"keywords": [
+  "name": "stream-buffers",
+  "version": "0.2.6",
+  "description": "Buffer-backed Streams for reading and writing.",
+  "keywords": [
     "memory streams",
     "streams",
     "buffer streams"
   ],
-	"author": "Sam Day <me@samcday.com.au>",
-	"main": "./lib/streambuffer.js",
-	"engines": { "node": ">= 0.3.0" },
-	"dependencies": {
-	},
-	"devDependencies": {
-		"vows": ">= 0.5.6"
-	},
-	"repository" : {
-    "type" : "git",
-     "url" : "https://github.com/samcday/node-stream-buffer.git"
+  "author": "Sam Day <me@samcday.com.au>",
+  "main": "./lib/streambuffer.js",
+  "engines": {
+    "node": ">= 0.3.0"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "vows": ">= 0.5.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/samcday/node-stream-buffer.git"
   },
   "scripts": {
-		"test": "vows --spec"
-	},
+    "test": "vows --spec"
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   }
