--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "istanbul": "^0.3.2",
     "vows": ">= 0.5.6"
   },
   "repository": {
@@ -21,6 +22,6 @@
     "url": "https://github.com/samcday/node-stream-buffer.git"
   },
   "scripts": {
-    "test": "vows --spec"
+    "test": "[ -n \"$NO_COVERAGE\" ] && vows --spec || istanbul cover vows -- --spec"
   }
 }
