--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "istanbul": "^0.3.2",
+    "istanbul": "~0.3.2",
     "vows": ">= 0.5.6"
   },
   "repository": {
