--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "istanbul": "~0.3.2",
     "vows": ">= 0.5.6"
   },
+  "license": "Unlicense",
   "repository": {
     "type": "git",
     "url": "https://github.com/samcday/node-stream-buffer.git"
