--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "eslint": "^1.9.0",
     "istanbul": "~0.3.2",
     "vows": ">= 0.5.6"
   },
@@ -23,6 +24,7 @@
     "url": "https://github.com/samcday/node-stream-buffer.git"
   },
   "scripts": {
-    "test": "istanbul test vows -- --spec"
+    "test": "istanbul test vows -- --spec",
+    "lint": "eslint ."
   }
 }
